<resources>
    <string name="btn_update">Update </string>
    <string name="msg_plate_number">Plate Number: </string>
    <string name="msg_chasis_number">VIN Number: </string>
    <string name="msg_brand">Brand: </string>
    <string name="msg_model">Model: </string>
    <string name="lbl_edit_car">Edit</string>
    <string name="lbl_car_tc">View trouble codes</string>
    <string name="lbl_email">Enter eMail</string>
    <string name="lbl_last_name">Enter Last Name</string>
    <string name="lbl_first_name">Enter First Name</string>
    <string name="btn_register">Register</string>
    <string name="btn_gettc">Go to get Trouble Codes</string>
    <string name="lbl_ssoid">Enter Username</string>
    <string name="lbl_password">Enter Password</string>
    <string name="btn_submit">Log in</string>
    <string name="btn_logout">Logout</string>
    <string name="app_name">FixMe</string>
    <string name="action">Action: </string>
    <string name="get_errors">Get error codes</string>
    <string name="obd_connection">OBD Connection: </string>
    <string name="bluetooth">Bluetooth</string>
    <string name="translator">Translator: </string>
    <string name="server_obd_api">Car Diagnostic API</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="vin">VIN: </string>
    <string name="vin_hint">WBAES26C05D</string>
    <string name="get_results">Get results</string>
    <string name="error_server">A server error occured.</string>
    <string name="translation_result">Translation results:</string>
    <string name="text_bluetooth_nodevice">No Bluetooth device selected</string>
    <string name="text_bluetooth_disabled">You have Bluetooth disabled. Please enable it (using Mock service).</string>
    <string name="text_no_bluetooth_id">Sorry, your device doesn\'t support Bluetooth</string>
    <string name="text_dtc_no_data">No DTC stored</string>
    <string name="text_noerrors">There were no errors found!</string>
    <string name="text_obd_command_failure">OBD command failure!</string>
    <string name="text_bluetooth_error_connecting">Cannot connect to bluetooth device!</string>
    <string name="choice_device">Choose a device</string>
    <string name="choice_language">Choose a language</string>
    <string name="system">System</string>
    <string name="fault">Fault</string>
    <string name="test">OBD/Test device</string>
    <string name="choice_test">Choice device type</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lbl_chasis_number">Enter chasis number</string>
    <string name="lbl_registration_number">Enter registration number</string>
    <string name="lbl_brand">Enter car\'s brand</string>
    <string name="btn_add_car">Add car</string>
    <string name="lbl_delete_car">Delete</string>
    <string name="lbl_model">Enter model</string>
    <string name="btn_edit_car">Edit Car</string>
    <string name="btn_check">Check for error codes</string>
    <string name="add_tccar">Add Trouble Code to this car</string>
</resources>

