<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cefad0">

    <TextView
        android:id="@+id/registration_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/msg_plate_number"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/chasis_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/msg_chasis_number"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/msg_brand"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/msg_model"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_car_trouble_codes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_car_tc" />

        <Button
            android:id="@+id/btn_edit_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_edit_car"
            android:layout_below="@+id/add_car"/>

        <Button
            android:id="@+id/btn_delete_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_delete_car"
            android:layout_below="@+id/edit_car"/>

    </LinearLayout>

</LinearLayout>