<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/info_usr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="#D32F2F" />

        <EditText
            android:id="@+id/txt_usr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/lbl_ssoid"
            android:padding="12dp" />

        <TextView
            android:id="@+id/info_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="#D32F2F" />

        <EditText
            android:id="@+id/txt_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/lbl_password"
            android:padding="12dp" />

        <TextView
            android:id="@+id/info_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="#D32F2F" />

        <EditText
            android:id="@+id/txt_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/lbl_first_name"
            android:padding="12dp" />

        <TextView
            android:id="@+id/info_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="#D32F2F" />

        <EditText
            android:id="@+id/txt_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/lbl_last_name"
            android:padding="12dp" />

        <TextView
            android:id="@+id/info_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="#D32F2F" />

        <EditText
            android:id="@+id/txt_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/lbl_email"
            android:padding="12dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#567d46"
            android:text="@string/btn_register"
            android:textColor="#fff" />

        </LinearLayout>
</RelativeLayout>